# langchain-bootcamp

./: README.md  pyproject.toml
1 - Model IO/: 01_langchain_basics.ipynb  02_templates.ipynb  03_few_shot_prompt_templates.ipynb  04_parsing_output.ipynb  05_serialization.ipynb
2 - Data Connections/: 01_document_loaders.ipynb  02_integration_loader.ipynb  03_document_transformers.ipynb  04_text_embeddings.ipynb  05_vector_store.ipynb  06_context_compression.ipynb
3 - Chains/: Chains.ipynb
